benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignums_Zeros_iter6_error.log
=== Verification Error - Iteration 6 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignums_Zeros.rs
Time: 2025-09-15 19:15:03

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0605]: non-primitive cast: `verus_builtin::int` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignums_Zeros_impl.rs:35:15
   |
35 |   for _ in 0..(n as usize) {
   |               ^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.

--------------------------------------------------------------------------------

Additional Output:
error[E0605]: non-primitive cast: `verus_builtin::int` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignums_Zeros_impl.rs:35:15
   |
35 |   for _ in 0..(n as usize) {
   |               ^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
